--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
+  firebase_database: 12.1.0
+  http: ^1.2.1
+
 
 dev_dependencies:
   flutter_test:
